--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
 <body>
     
 </body>
-</html>
+</html> -->
 
 
 <!-- dois tipos diferentes o a base para qualquer projeto em HTML -->
