--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <main>
             <h1>Erick Willian Rodrigues | WDD130</h1>
             <img src="images/profile.jpg" alt="Hi, My name is Erick Willian Rodrigues" width="200">
-            <p>Hello! My name is Erick and I am from Curitiba, Brazil, I enjoy play video games.</p>
+            <p>Hello! My name is Erick and I am from Curitiba, Brazil, I enjoy playing video games.</p>
         </main>
         <footer>
             <p>&copy;2025 🌴 Erick Rodrigues 🌴 Curitiba, Brazil</p>
