--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
         <main>
             <h1>Erick Willian Rodrigues | WDD130</h1>
-            <img src="images/profile.jpg" alt="Hi, My name is Erick Willian Rodrigues" width="200">
+            <img src="Images/profile.jpg" alt="Hi, My name is Erick Willian Rodrigues" width="200">
             <p>Hello! My name is Erick and I am from Curitiba, Brazil, I enjoy playing video games.</p>
         </main>
         <footer>
