Home page enhancements

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <link rel="stylesheet" href="Styles/Styles.css">
+        
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Erick Rodrigues | WDD 130</title>
+        <meta name="description" content="This is Erick's Home Page for WDD 130, the purpose of this page is to get to know me a little. Perfect!">
+        <meta name="Author" content="Erick Willian Rodrigues">
+        <link rel="stylesheet" href="Styles/Styles.css">
     </head>
     <body>
         <header>
@@ -18,6 +21,11 @@
             <img src="Images/profile.jpg" alt="Hi, My name is Erick Willian Rodrigues" width="200">
             <p>Hello! My name is Erick and I am from Curitiba, Brazil, I enjoy playing video games.</p>
         </main>
+        <aside>
+            <h2>Paraná | Brazil</h2>
+            <img src="Images/iguaçu-falls.jpg" alt="This is a perfect representation of my state!" width="200">
+            <p>Paraná is a big state from the south os Brazil, we get a short winter here and we have one of the 7 wonders of the world!</p>
+        </aside>
         <footer>
             <p>&copy;2025 🌴 Erick Rodrigues 🌴 Curitiba, Brazil</p>
         </footer>
