--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </main>
         <aside>
             <h2>Paraná | Brazil</h2>
-            <img src="Images/iguaçu-falls.jpg" alt="This is a perfect representation of my state!" width="200">
+            <img src="Images/iguaçu-falls.jpg" alt="This is a perfect representation of my state!">
             <p>Paraná is a big state from the south os Brazil, we get a short winter here and we have one of the 7 wonders of the world!</p>
         </aside>
         <footer>
