update in process

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,7 @@
         <img src="images/rodrigues-logo.png" alt="Logo of Rodrigues rafting club!">
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">About</a>
+            <a href="#">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -29,9 +29,13 @@
                 <p> element with the company purpose, mission, creed, motto, etc. It is Ok to use non-sense, placeholder language for now.</p>
             </article>
         </div>
-        <section>
-            <h2> History</h2>
-            <p> history historyhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistory</p>
+            <section class="historysections">
+                <h2> History</h2>
+                <div>
+                    <p> history historyhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistory</p>
+                    <img src="images/History.jpg" alt="Adventure time is coming up!">
+                    <p> history historyhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistory</p>
+                </div>
         </section>
         <section>
             <h2> Adventure Awaits You!</h2>
