starting contact page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -29,26 +29,46 @@
                 <p> element with the company purpose, mission, creed, motto, etc. It is Ok to use non-sense, placeholder language for now.</p>
             </article>
         </div>
-            <section class="historysections">
-                <h2> History</h2>
-                <div>
-                    <p> history historyhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistory</p>
-                    <img src="images/History.jpg" alt="Adventure time is coming up!">
-                    <p> history historyhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistory</p>
-                </div>
+        <section class="historysections">
+            <h2> History</h2>
+            <div>
+                <p> history historyhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistory</p>
+                <img src="images/History.jpg" alt="Adventure time is coming up!">
+                <p> history historyhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistoryhistory</p>
+            </div>
         </section>
-        <section>
+        <section class="fiveimages"> 
             <h2> Adventure Awaits You!</h2>
-            <img src="images/1.jpg" alt="Great adventure">
-            <img src="images/2.jpg" alt="Great adventure">
-            <img src="images/3.jpg" alt="Great adventure">
-            <img src="images/4.jpg" alt="Great adventure">
-            <img src="images/5.jpg" alt="Great adventure">
+            <div>
+                <figure>
+                    <img src="images/1.jpg" alt="Great adventure">
+                    <figcaption>Rafting preparations!</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/2.jpg" alt="Great adventure">
+                    <figcaption>Canyon River!</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/3.jpg" alt="Great adventure">
+                    <figcaption>Salmon River Rapids</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/4.jpg" alt="Great adventure">
+                    <figcaption>Green River Rapids</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/5.jpg" alt="Great adventure">
+                    <figcaption>Deerfield River Rapids</figcaption>
+                </figure> 
+            </div>
+                
         </section>
     </main>
 
     <footer>
+        <div></div>
         <p>&copy;2025 | Rodrigues Rafting Club | Erick Rodrigues</p>
+        <div></div>
         <nav class="sociallinks">
             <a href="https://facebook.com">
                 <img src="images/facebook-logo.png" alt="Facebook">
