--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -23,11 +23,94 @@
     </header>
 
     <main>
-        
+        <div class="beginning">
+            <h1>Reach our team</h1>
+            <p>We love questions and feedback – and we're always happy to help! Here are some ways to contact us.</p>
+        </div>
+        <div class="outsidesales">
+            <div class="salesdep">
+                <h2>Talk to sales</h2>
+                <p>Chat with our sales team to discover how our adventures can work best for you.</p>
+                <p>801-555-4444</p>
+            </div>    
+        </div>
+        <div class="location">
+            <div class="locationinfo"> 
+                <h2>Location</h2>
+                <h3>Curitiba, Brazil</h3>
+                <p>644 João Bettega Street</p>
+                <p>contact-us@Rodriguesrafiting.com</p>
+                <p>801-555-4444</p>
+            </div>
+            <div><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d8729.136909258541!2d-48.80382073224102!3d-25.490449021320337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1740020899443!5m2!1spt-BR!2sbr" width="700" height="350" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        </div>
+        <section class="workerssec">
+            <h2>Employees</h2>
+            <div class="row">
+                <img src="images/worker1.jpeg" alt="happy employee">
+                <div class="workertext">
+                    <h3>Jake Thompson – Lead Raft Guide</h3>
+                    <p>Jake is an experienced rafting guide with over a decade of navigating whitewater rapids.
+                        He’s known for his calm demeanor under pressure and his ability to keep guests safe while 
+                        ensuring they have a thrilling adventure. When he's not on the river, he enjoys rock climbing 
+                        and teaching water rescue courses.
+
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="workertext">
+                    <h3>Marcus Holloway – Equipment and Safety Specialist</h3>
+                    <p>Marcus is responsible for maintaining and inspecting all rafting gear, from life jackets to paddles
+                         and rafts. A former mechanical engineer, he brings a meticulous eye to equipment safety, ensuring
+                          that everything meets top industry standards. When he’s not working, he enjoys building custom kayaks
+                           and testing them on nearby rivers.</p>
+                </div>    
+                <img src="images/worker2.jpeg" alt="happy employee">
+            </div>
+            <div class="row">
+                <img src="images/worker3.jpeg" alt="happy employee">
+                <div class="workertext">
+                    <h3>Samantha Delgado – Customer Experience Manager</h3>
+                    <p>Samantha is the friendly face behind the company’s customer service and trip coordination. She ensures that
+                         every guest has a seamless experience from booking to post-trip feedback. With a background in outdoor
+                          tourism and hospitality, she’s passionate about connecting people with nature and making every adventure
+                           unforgettable.</p>
+                </div>    
+            </div>
+        </section>
+        <section class="formpart">
+            <h2>Send us a Message</h2>
+            <p>Send us a message and we'll respond within 24 hours. </p>
+            <form>
+                <div id="firstinfo">
+                    <label for="fname">Full Name:</label><br>
+                    <input type="text" id="fname" name="fname"><br>
+                    <label for="email">Email:</label><br>
+                    <input type="text" id="email" name="email"><br><br>
+                </div>
+                <p>message purpose</p>
+                <input type="radio" id="gen_inquiry" name="Message_purpose" value="General inquiry">
+                <label for="gen_inquiry">General inquiry</label><br>
+                <input type="radio" id="res_question" name="Message_purpose" value="res_question">
+                <label for="res_question">Reservation question</label><br>
+                <input type="radio" id="webs_suggestion" name="Message_purpose" value="webs_suggestion">
+                <label for="webs_suggestion">Website suggestion</label><br><br>
+                <label for="message">Message:</label><br>
+                <textarea id="message" name="message"></textarea><br><br>
+                <input type="checkbox" id="subscribe" name="subscribe" value="subscribe">
+                <label for="subscribe"> Please subscribe me to the monthly newsletter</label><br><br>
+                <div><input id="sendbutton" type="submit" value="Send"></div>
+            </form>
+        </section>
     </main>
 
     <footer>
-        <div></div>
+        <div>
+            <a href="https://app.moqups.com/GvTTfJGUZ5HFmBj0LWtow76GSTT42dhJ/view/page/ad12de680">
+                Wireframe
+            </a>
+        </div>
         <p>&copy;2025 | Rodrigues Rafting Club | Erick Rodrigues</p>
         <div></div>
         <nav class="sociallinks">
