--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Germania+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/rafting.css">
+</head>
 <body>
     <header>
         <img src="images/rodrigues-logo.png" alt="Logo of Rodrigues rafting club!">
