--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Contact Us Rodrigues Rafiting Club</title>
     <meta name="description" content="Contact information page'">
     <meta name="author" content="Erick Rodrigues">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Germania+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/rafting.css">
+</head>
 <body>
     <header>
         <img src="images/rodrigues-logo.png" alt="Logo of Rodrigues rafting club!">
@@ -100,7 +101,7 @@
                 <textarea id="message" name="message"></textarea><br><br>
                 <input type="checkbox" id="subscribe" name="subscribe" value="subscribe">
                 <label for="subscribe"> Please subscribe me to the monthly newsletter</label><br><br>
-                <div><input id="sendbutton" type="submit" value="Send"></div>
+                <div><button class="sendbutton" type="submit" value="Send"> Send</button></div>
             </form>
         </section>
     </main>
