--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -101,7 +101,7 @@
                 <textarea id="message" name="message"></textarea><br><br>
                 <input type="checkbox" id="subscribe" name="subscribe" value="subscribe">
                 <label for="subscribe"> Please subscribe me to the monthly newsletter</label><br><br>
-                <div><button class="sendbutton" type="submit" value="Send"> Send</button></div>
+                <div><button class="sendbutton" type="submit" value="Send"> Send Message</button></div>
             </form>
         </section>
     </main>
