Home page update

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -17,9 +17,9 @@
         <img src="images/rodrigues-logo.png" alt="Logo of Rodrigues rafting club!">
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">About Us</a>
+            <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
 
