start trip page

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -30,7 +30,7 @@
                 <h1> Rodrigues Rafting Club</h1>
                 <p>Build memories with our expert team!</p>
                 <a href="trips.html">
-                    <button>Build Now</button>
+                    <button class="callbutton">Build Now</button>
                 </a>
             </article>
         </div>
