--- a/wwr/index.html
+++ b/wwr/index.html
@@ -29,9 +29,7 @@
             <article>
                 <h1> Rodrigues Rafting Club</h1>
                 <p>Build memories with our expert team!</p>
-                <a href="trips.html">
-                    <button class="callbutton">Build Now</button>
-                </a>
+                <a href="trips.html"><button class="callbutton">Build Now</button></a>
             </article>
         </div>
         <section class="gridpics">
